Bug 296668 - Error dialog upon startup
Summary: Error dialog upon startup
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 1.3 (KDE 4.8)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-24 06:11 UTC by Heath Matlock
Modified: 2012-05-12 20:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heath Matlock 2012-03-24 06:11:11 UTC
A file dialog appears the title of the dialog being "Position Marker Plugin", with a message of, "Unable to load custom cursor, default cursor will be used. Make sure this is a valid image file." After clicking okay, marble proceeds to open as normal.

Marble Version 1.3.20 (PRE 1.4 GIT)
Comment 1 Bernhard Beschow 2012-03-25 12:27:36 UTC
Git commit b9df3adba3f9688a0f2f3641cc084999e769c2df by Bernhard Beschow.
Committed on 25/03/2012 at 13:00.
Pushed by beschow into branch 'master'.

don't load (improperly initialized) default settings from plugins

M  +1    -1    src/lib/MarbleWidget.cpp

http://commits.kde.org/marble/b9df3adba3f9688a0f2f3641cc084999e769c2df
Comment 2 Dennis Nienhüser 2012-05-12 20:21:19 UTC
Git commit 6ab6bc8fea0122802c108581f6b9ec8f14b06a80 by Dennis Nienhüser, on behalf of Bernhard Beschow.
Committed on 25/03/2012 at 13:00.
Pushed by nienhueser into branch 'KDE/4.8'.

don't load (improperly initialized) default settings from plugins
(cherry picked from commit b9df3adba3f9688a0f2f3641cc084999e769c2df)

M  +1    -1    src/lib/MarbleWidget.cpp

http://commits.kde.org/marble/6ab6bc8fea0122802c108581f6b9ec8f14b06a80