don't load (improperly initialized) default settings from plugins

BUG: 296668